[tool.poetry]
name = "magnet"
version = "1.1.3"
description = "MAGNET: A Modality-Agnostic Network for 3D Medical Image Segmentation (v1.1.3)"
authors = ["Qisheng He <Qisheng.He@wayne.edu>"]
repository = "https://github.com/kisonho/magnet.git"

[tool.poetry.dependencies]
monai = "^0.9.0"
python = "^3.9"
torch = "^1.12.1"
torchmanager = "^1.0.4"

[[tool.poetry.packages]]
include = "magnet"

[[tool.poetry.packages]]
include = "torchmanager_monai"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"