[tool.poetry]
name = "magms"
version = "2.1b1"
description = "Modality-Agnostic Learning for Medical Image Segmentation Using Multi-modality Self-distillation (v2.1b1)"
authors = ["Qisheng He <Qisheng.He@wayne.edu>"]
repository = "https://github.com/kisonho/magnet.git"

[tool.poetry.dependencies]
python = "^3.9"
torch = "*"
torchmanager = "^1.1"

[tool.poetry.optional-dependencies]
monai = {version = "^0.9.0", extras = ["torchmanager_monai"]}

[[tool.poetry.packages]]
include = "magnet"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"